# doclift

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: AGENTIC_OS.md  architecture.md  bundle-format.md  library-argument-ingestion.md  okf-export.md  reasoning-scaffold-format.md  roadmap.md
src/doclift/: cli.py  convert.py  inspect.py  legacy_doc.py  mcp.py  okf_export.py  schemas.py  utils.py  wordperfect.py
tests/: test_convert.py  test_legacy_doc.py  test_mcp.py
