[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doclift"
version = "0.1.0"
description = "Legacy-document normalization and structured conversion toolkit"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7",
  "PyYAML>=6.0",
]

[project.scripts]
doclift = "doclift.cli:main"
doclift-mcp = "doclift.mcp:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
